--- a/Services/Contact/Contact.Application/Contact.Application.csproj
+++ b/Services/Contact/Contact.Application/Contact.Application.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Contact.Domain\Contact.Domain.csproj" />
     <ProjectReference Include="..\..\..\Shared\Shared.Api.Common\Shared.Api.Common.csproj" />
     <ProjectReference Include="..\..\..\Shared\Shared.Common\Shared.Common.csproj" />
   </ItemGroup>
