--- a/Services/ContactManagement/ContactManagement.Api/ContactManagement.Api.csproj
+++ b/Services/ContactManagement/ContactManagement.Api/ContactManagement.Api.csproj
@@ -14,6 +14,7 @@
     <ProjectReference Include="..\..\..\Shared\Shared.Api.Common\Shared.Api.Common.csproj" />
     <ProjectReference Include="..\..\..\Shared\Shared.Common\Shared.Common.csproj" />
     <ProjectReference Include="..\ContactManagement.Application\ContactManagement.Application.csproj" />
+    <ProjectReference Include="..\ContactManagement.Domain\ContactManagement.Domain.csproj" />
   </ItemGroup>
 
 </Project>
