--- a/Services/ContactManagement/Tests/ContactManagement.Application.Tests/ContactManagement.Application.Tests.csproj
+++ b/Services/ContactManagement/Tests/ContactManagement.Application.Tests/ContactManagement.Application.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
