--- a/Services/ContactManagement/Tests/ContactManagement.Api.Tests/ContactManagement.Api.Tests.csproj
+++ b/Services/ContactManagement/Tests/ContactManagement.Api.Tests/ContactManagement.Api.Tests.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.2" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.7" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
