--- a/Services/ContactManagement/ContactManagement.Api/appsettings.Development.json
+++ b/Services/ContactManagement/ContactManagement.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ContactManagementDb": "Server=localhost;Port=5432;Database=ContactManagement;Username=postgres;Password=1234;"
   }
 }
