Feature: Add service extensions, and wiring up ReportManagement.api.

--- a/Services/ReportManagement/ReportManagement.Api/appsettings.Development.json
+++ b/Services/ReportManagement/ReportManagement.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "ReportManagementDb": "Server=localhost;Port=5432;Database=ReportManagement;Username=postgres;Password=1234;"
   }
 }
