--- a/Services/ReportManagement/ReportManagement.Api/ReportManagement.Api.csproj
+++ b/Services/ReportManagement/ReportManagement.Api/ReportManagement.Api.csproj
@@ -8,11 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ReportManagement.Application\ReportManagement.Application.csproj" />
-    <ProjectReference Include="..\ReportManagement.Domain\ReportManagement.Domain.csproj" />
+    <ProjectReference Include="..\ReportManagement.Infrastructure.Data\ReportManagement.Infrastructure.Data.csproj" />
   </ItemGroup>
 
 </Project>
