--- a/Services/ReportManagement/ReportManagement.Infrastructure.Data/ReportManagement.Infrastructure.Data.csproj
+++ b/Services/ReportManagement/ReportManagement.Infrastructure.Data/ReportManagement.Infrastructure.Data.csproj
@@ -9,10 +9,13 @@
   <ItemGroup>
     <PackageReference Include="EFCore.NamingConventions" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.8" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ReportManagement.Application\ReportManagement.Application.csproj" />
     <ProjectReference Include="..\ReportManagement.Domain\ReportManagement.Domain.csproj" />
   </ItemGroup>
 
