Feature: Add MessageBus based communication between microservices. Shared event messaging related concerns put into Shared.Contracts, Shared.Application.Messaging and Shared.Infrastructure.Messaging. ContactManagement.Messaging.Service and ReportManagement.Messaging.Service serve as message entry points to microservices. They handle interservice communications using MessageBus (MassTransit under the hood.)

--- a/Services/ContactManagement/ContactManagement.Application/ContactManagement.Application.csproj
+++ b/Services/ContactManagement/ContactManagement.Application/ContactManagement.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\Shared.Common\Shared.Common.csproj" />
+    <ProjectReference Include="..\..\..\Shared\Shared.Contracts\Shared.Contracts.csproj" />
     <ProjectReference Include="..\ContactManagement.Domain\ContactManagement.Domain.csproj" />
   </ItemGroup>
 
