--- a/Services/ContactManagement/ContactManagement.Messaging.Service/appsettings.Development.json
+++ b/Services/ContactManagement/ContactManagement.Messaging.Service/appsettings.Development.json
@@ -2,11 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "ConnectionStrings": {
-    "ReportManagementDb": "Server=localhost;Port=5432;Database=ReportManagement;Username=postgres;Password=1234;"
   },
   "RabbitMqSettings": {
     "Host": "localhost",
