--- a/Services/ReportManagement/ReportManagement.Api/ReportManagement.Api.csproj
+++ b/Services/ReportManagement/ReportManagement.Api/ReportManagement.Api.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\Shared.Api.Common\Shared.Api.Common.csproj" />
+    <ProjectReference Include="..\..\..\Shared\Shared.Infrastructure.Messaging\Shared.Infrastructure.Messaging.csproj" />
     <ProjectReference Include="..\ReportManagement.Application\ReportManagement.Application.csproj" />
     <ProjectReference Include="..\ReportManagement.Infrastructure.Data\ReportManagement.Infrastructure.Data.csproj" />
   </ItemGroup>
