--- a/Services/ContactManagement/ContactManagement.Messaging.Service/appsettings.Development.json
+++ b/Services/ContactManagement/ContactManagement.Messaging.Service/appsettings.Development.json
@@ -5,6 +5,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "ContactManagementDb": "Server=localhost;Port=5432;Database=ContactManagement;Username=postgres;Password=1234;"
+  },
   "RabbitMqSettings": {
     "Host": "localhost",
     "Port": "5672",
