--- a/Services/ReportManagement/ReportManagement.Messaging.Service/ReportManagement.Messaging.Service.csproj
+++ b/Services/ReportManagement/ReportManagement.Messaging.Service/ReportManagement.Messaging.Service.csproj
@@ -17,5 +17,6 @@
     <ProjectReference Include="..\..\..\Shared\Shared.Contracts\Shared.Contracts.csproj" />
     <ProjectReference Include="..\..\..\Shared\Shared.Infrastructure.Messaging\Shared.Infrastructure.Messaging.csproj" />
     <ProjectReference Include="..\ReportManagement.Application\ReportManagement.Application.csproj" />
+    <ProjectReference Include="..\ReportManagement.Infrastructure.Data\ReportManagement.Infrastructure.Data.csproj" />
   </ItemGroup>
 </Project>
