--- a/Deployment/docker-compose.yml
+++ b/Deployment/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - pgdata:/var/lib/postgresql/data
 
   phonebook-rabbitmq:
-    image: rabbitmq:3-management
+    image: rabbitmq:4-management
     container_name: phonebook.rabbitmq
     ports:
       - "55672:5672"
@@ -27,6 +27,7 @@ services:
     container_name: phonebook.contactmanagement.api
     depends_on:
       - phonebook-rabbitmq
+    restart: on-failure
     ports:
       - "50501:8080"
     environment:
@@ -41,6 +42,7 @@ services:
     depends_on:
       - phonebook-postgres
       - phonebook-rabbitmq
+    restart: on-failure
     environment:
       DOTNET_ENVIRONMENT: Production
       ConnectionStrings__ContactManagementDb: Server=phonebook-postgres;Port=5432;Database=ContactManagement;Username=postgres;Password=1234;
@@ -57,6 +59,7 @@ services:
     depends_on:
       - phonebook-postgres
       - phonebook-rabbitmq
+    restart: on-failure
     ports:
       - "50502:8080"
     environment:
@@ -75,6 +78,7 @@ services:
     depends_on:
       - phonebook-postgres
       - phonebook-rabbitmq
+    restart: on-failure
     environment:
       DOTNET_ENVIRONMENT: Production
       ConnectionStrings__ReportManagementDb: Server=phonebook-postgres;Port=5432;Database=ReportManagement;Username=postgres;Password=1234;
@@ -91,6 +95,7 @@ services:
     depends_on:
       - contactmanagement-api
       - reportmanagement-api
+    restart: on-failure
     environment:
       ASPNETCORE_ENVIRONMENT: Production
     ports:
